--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -155,8 +155,8 @@
                     </div>
 
                     <div class="col-auto text-end p-0 me-2">
-                        <label class="form-label" for="amount">Costo Total:</label>
-                        <input class="form-control" type="text" name="amount" id="amount" size="20px" value="0"
+                        <label class="form-label" for="totalPrice">Costo Total:</label>
+                        <input class="form-control" type="text" name="totalPrice" id="totalPrice" size="20px" value="0"
                             readonly />
                     </div>
 
