--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -1,11 +1,9 @@
 <div class="row">
     <div class="bg-light border border-secondary p-0">
         <div>
-            <h1 class="text-center bg-dark text-light py-2">Presupuesto de la
-                Actividad</h1>
+            <h1 class="text-center bg-dark text-light py-2">Presupuesto de la Actividad</h1>
             <p class="fs-4 lead border border border-2 py-2 ps-4">Editar presupuesto:</p>
         </div>
-
         <div class="mt-3">
             <form action="/presupuesto/edit-presupuesto/{{presupuesto._id}}?_method=PUT" method="POST">
                 <input type="hidden" name="_method" value="PUT" />
@@ -19,9 +17,8 @@
                         <div class="form-group">
                             <label for="typeActivity">Tipo de actividad</label>
                             <select class="form-select" name="typeActivity">
-                                <option value="{{presupuesto.typeActivity}}">
-                                    {{presupuesto.typeActivity}}</option>
-                                <option value="Indefinido">Seleciona un tipo</option>
+                                <option value="{{presupuesto.typeActivity}}" selected>{{presupuesto.typeActivity}}
+                                </option>
                                 <option value="Cumpleaños">Cumpleaños</option>
                                 <option value="Graduacion">Graduacion</option>
                                 <option value="Boda">Boda</option>
@@ -35,7 +32,6 @@
                                 value="{{presupuesto.nameClient}}" />
                         </div>
                     </div>
-
                     <div>
                         <div class="form-group">
                             <label for="phone">Telefono</label>
@@ -51,7 +47,6 @@
                             <input type="text" class="form-control" name="location" value="{{presupuesto.location}}" />
                         </div>
                     </div>
-
                     <div>
                         <div class="form-group">
                             <label for="dateActivity">Dia de la actividad</label>
@@ -69,51 +64,41 @@
                                 value="{{presupuesto.descriptionActivity}}" />
                         </div>
                     </div>
-
                     <div>
                         <div class="form-group">
                             <label for="status">Estado del presupuesto</label>
                             <select class="form-select" name="status">
-                                <option value="{{presupuesto.status}}">{{presupuesto.status}}
-                                </option>
-                                <option value="Indefinido" selected>Seleciona un estado</option>
+                                <option value="{{presupuesto.status}}" selected>{{presupuesto.status}}</option>
                                 <option value="Aceptado">Aceptado</option>
-                                <option value="Pendiente">Pendiente</option>
+                                <option value="Editando">Editando</option>
                                 <option value="Rechazado">Rechazado</option>
                                 <option value="Completado">Completado</option>
                             </select>
                         </div>
-
                         <div class="form-group">
                             <label for="statusPaid">Estado de pago</label>
                             <select class="form-select" name="statusPaid">
-                                <option value="{{presupuesto.statusPaid}}">
-                                    {{presupuesto.statusPaid}}</option>
-                                <option value="" selected>Seleciona un estado</option>
-                                <option value="pendiente">Pagado</option>
-                                <option value="pendiente">pendiente</option>
+                                <option value="{{presupuesto.statusPaid}}" selected>{{presupuesto.statusPaid}}</option>
+                                <option value="Pagado">Pagado</option>
+                                <option value="Pendiente">Pendiente</option>
                             </select>
                         </div>
-
                         <div class="form-group">
                             <label for="createdBy">Creado por</label>
                             <input type="text" class="form-control" name="createdBy"
                                 value="{{presupuesto.createdBy}}" />
                         </div>
                     </div>
-
                     <div class="col-12">
-                        <p class="fs-5 lead border-bottom border-2 ps-4">Facturacion de
-                            presupuesto:
-                        </p>
+                        <p class="fs-5 lead border-bottom border-2 ps-4">Facturacion del
+                            presupuesto:</p>
                     </div>
-
                     <div class="container-fluid table-responsive">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th>#</th>
-                                    <th>Tipo</th>
+                                    <th>Tipo</th>`
                                     <th>Articulo</th>
                                     <th>Cantidad</th>
                                     <th>Precio</th>
@@ -121,10 +106,12 @@
                                 </tr>
                             </thead>
                             <tbody id="DinamicTableRow">
+                                {{#each presupuesto.presupuestoData.typeArticle}}
                                 <tr>
-                                    <th>1</th>
+                                    <th>{{@index}}</th>
                                     <td>
                                         <select class="form-select" name="typeArticle[]">
+                                            <option value="{{this}}">{{this}} </option>
                                             <option value="equipo">Equipo</option>
                                             <option value="decoracion">Decoracion</option>
                                             <option value="comida">Comida</option>
@@ -132,20 +119,32 @@
                                             <option value="otro">Otro</option>
                                         </select>
                                     </td>
-                                    <td><input class="form-control" type="text" name="article[]"
-                                            placeholder="Bocinas" />
+                                    <td>
+                                        <input class="form-control" type="text" name="nameArticle[]"
+                                            placeholder="Bocinas"
+                                            value="{{lookup ../presupuesto.presupuestoData.nameArticle @index}}" />
                                     </td>
-                                    <td><input class="form-control" type="text" name="totalArticle[]" placeholder="0" />
+                                    <td>
+                                        <input class="form-control totalArticle" type="number" name="totalArticle[]"
+                                            value="{{lookup ../presupuesto.presupuestoData.totalArticle @index}}" />
                                     </td>
-                                    <td><input class="form-control" type="text" name="price[]" placeholder="0" /></td>
-                                    <td><input class="form-control" type="text" name="itbis[]" placeholder="0" /></td>
+                                    <td>
+                                        <input class="form-control price" type="number" name="price[]"
+                                            value="{{lookup ../presupuesto.presupuestoData.price @index}}" />
+                                    </td>
+                                    <td>
+                                        <input class="form-control itbis" type="number" name="itbis[]"
+                                            value="{{lookup ../presupuesto.presupuestoData.itbis @index}}" readonly />
+                                    </td>
                                 </tr>
+                                {{/each}}
+
+
                             </tbody>
 
                         </table>
                     </div>
                 </div>
-
                 <div class="mb-5 mx-5 row justify-content-end">
                     <div>
                         <button class="btn btn-success" id="btnNewRow">
@@ -153,22 +152,19 @@
                             Agregar
                         </button>
                     </div>
-
                     <div class="col-auto text-end p-0 me-2">
                         <label class="form-label" for="totalPrice">Costo Total:</label>
-                        <input class="form-control" type="text" name="totalPrice" id="totalPrice" size="20px" value="0"
+                        <input class="form-control" type="text" name="totalPrice" id="totalPrice" size="20px" value=0
                             readonly />
                     </div>
-
                     <div class="col-auto text-end p-0">
-                        <label class="form-label" for="itbis">ITBIS:</label>
-                        <input class="form-control" type="text" name="itbis" id="itbis" size="20px" value="0"
+                        <label class="form-label" for="totalItbis">Total Itbis:</label>
+                        <input class="form-control" type="text" name="totalItbis" id="totalItbis" size="20px" value=0
                             readonly />
                     </div>
-
                     <div class="col-12 text-end mt-3 p-0">
                         <button class="btn btn-primary fw-bold py-2" type="submit">
-                            Guardar
+                            Confirmar
                         </button>
                     </div>
                 </div>
