--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -49,7 +49,7 @@
                 <td>{{presupuestoData.totalPrice}}</td>
                 <td>
                     <div class="d-flex d-flex align-items-center justify-content-evenly gap-1 ps-3">
-                        <a class="border-0 bg-transparent" href=""><i class="fa fa-eye text-success fa-lg"></i></a>
+                        <a class="border-0 bg-transparent" href="/presupuesto/print/{{_id}}"><i class="fa fa-eye text-success fa-lg"></i></a>
                         <a class="border-0 bg-transparent" href="/presupuesto/edit/{{_id}}"><i
                                 class="fas fa-edit fa-lg text-primary"></i></a>
                         <!-- DELETE REQUEST -->
