--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/main.css">
     {{!-- Falvicon icon --}}
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -34,9 +35,10 @@
 
     <!-- Scritps -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+        </script>
+    <script src="/js/index.js"></script>
+
 </body>
 
 </html>
