--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,9 +1,9 @@
 <div class="row mt-5">
   <div class="col-md-4 offset-md-4">
     <div class="card card-body">
-      <h1>Internal Server Error</h1>
+      <h1>Error interno del Servidor</h1>
       <p>{{error}}</p>
-      <a href="/">Return to home</a>
+      <a href="/">Volver al inicio</a>
     </div>
   </div>
 </div>
