--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -1,7 +1,7 @@
 <div class="col-md-4 mx-auto mt-5">
     <div class="card">
         <div class="card-header bg-dark text-center">
-            <h3 class="text-white">Nuevo Proveedor</h3>
+            <h3 class="text-white">Crear Proveedor</h3>
         </div>
         <div class="card-body">
             <form action="/proveedores/new-proveedor" method="POST">
