Total descuento funciona al 99%

--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -140,6 +140,11 @@
                                     id="totalItbis" size="20px" readonly />
                             </div>
                             <div class="text-end">
+                                <label class="form-label fs-5 fw-bold" for="totalDiscount">Total ITBIS: </label>
+                                <input class="form-control-sm fs-5 fw-bold" type="text" name="totalDiscount"
+                                    id="totalDiscount" size="20px" readonly />
+                            </div>
+                            <div class="text-end">
                                 <label class="form-label fs-5 fw-bold" for="totalAmount">Monto Total: </label>
                                 <input class="form-control-sm fs-5 fw-bold" type="text" name="totalAmount"
                                     id="totalAmount" size="20px" readonly />
