--- a/src/views/presupuesto/new-presupuesto.hbs
+++ b/src/views/presupuesto/new-presupuesto.hbs
@@ -157,9 +157,14 @@
                                 size="20px" readonly />
                         </div>
                         <div class="text-end">
+                            <label class="form-label fs-5 fw-bold" for="totalDiscount">Total Descuento: </label>
+                            <input class="form-control-sm fs-5 fw-bold" type="text" name="totalDiscount" value=0
+                                id="totalDiscount" size="20px" readonly />
+                        </div>
+                        <div class="text-end">
                             <label class="form-label fs-5 fw-bold" for="totalAmount">Monto Total: </label>
                             <input class="form-control-sm fs-5 fw-bold" type="text" name="totalAmount" id="totalAmount"
-                                value="0" size="20px" readonly />
+                                value=0 size="20px" readonly />
                         </div>
                         <div class="text-end my-3">
                             <button class="btn btn-primary fw-bold fs-4 p-2" type="submit">
@@ -325,9 +330,14 @@
                                 size="20px" readonly />
                         </div>
                         <div class="text-end">
+                            <label class="form-label fs-5 fw-bold" for="totalDiscount">Total Descuento: </label>
+                            <input class="form-control-sm fs-5 fw-bold" type="text" name="totalDiscount"
+                                id="totalDiscount" value=0 size="20px" readonly />
+                        </div>
+                        <div class="text-end">
                             <label class="form-label fs-5 fw-bold" for="totalAmount">Monto Total: </label>
                             <input class="form-control-sm fs-5 fw-bold" type="text" name="totalAmount" id="totalAmount"
-                                value="0" size="20px" readonly />
+                                value=0 size="20px" readonly />
                         </div>
                         <div class="text-end my-3">
                             <button class="btn btn-primary fw-bold fs-4 p-2" type="submit">
